--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "validator\\": "src/"
+            "Validator\\": "src/"
         }
     },
     "require": {
