--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "require": {
         "php": ">=7.0",
-        "illuminate/support":"^5.0"
+        "illuminate/support":">=5.0,>=6.0"
     },
     "license": "MIT"
 }
